<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Class Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="backToFrame1">Return to Frame1</string>
    
   <string name="menuitem_new_instructor">New Instructor</string>
   <string name="menuitem_show_instructors">Show Instructors</string>
   <string name="menuitem_new_TA">New TA</string>
   <string name="menuitem_show_TAs">Show TAs</string>
</resources>
